--- a/css/common.css
+++ b/css/common.css
@@ -12,3 +12,28 @@ body {
   color: #212121;
   line-height: 1.5;
 }
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  padding: 0;
+  list-style-type: none;
+  width: 1128px;
+  position: absolute;
+  top: 100px;
+  left: 156px;
+}
+
+.gallery li {
+  flex: 1 1 calc(100% /3 - 24px);
+  box-shadow: none;
+  border-radius: 0px;
+  overflow: hidden;
+}
+
+.gallery img {
+  width: 100%;
+  height: auto;
+  display: block;
+
+}
