--- a/css/common.css
+++ b/css/common.css
@@ -3,7 +3,13 @@
 }
 
 body {
-  margin: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  margin: 0;
+  /* Встановлено на 0 для уникнення відступів */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -11,42 +17,6 @@ body {
   background-color: #fafafa;
   color: #212121;
   line-height: 1.5;
-}
-.gallery {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 24px;
-  padding: 0;
-  list-style-type: none;
-  width: 1128px;
-  position: absolute;
-  top: 100px;
-  left: 156px;
-}
-
-.gallery li {
-  flex: 1 1 calc(100% /3 - 24px);
-  box-shadow: none;
-  border-radius: 0px;
-  overflow: hidden;
-}
-
-.gallery img {
-  width: 100%;
-  height: auto;
-  display: block;
-
-}
-body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  margin: 0;
-  font-family: Arial, sans-serif;
-  background-color: #f0f0f0;
-  /* Фоновий колір */
 }
 
 input {
@@ -76,4 +46,78 @@ span {
   /* Жирний шрифт для привітання */
   color: #333;
   /* Колір тексту */
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  padding: 0;
+  list-style-type: none;
+  width: 1128px;
+  position: absolute;
+  top: 100px;
+  left: 156px;
+}
+
+.gallery li {
+  flex: 1 1 calc(100% / 3 - 24px);
+  box-shadow: none;
+  border-radius: 0px;
+  overflow: hidden;
+}
+
+.gallery img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.login-form {
+  width: 408px;
+  /* Ширина форми */
+  height: auto;
+  /* Висота автоматично підлаштовується */
+  position: relative;
+  /* Зміна на relative для позиціювання */
+  margin: 20px;
+  /* Відступи для вирівнювання */
+  padding: 24px;
+  /* Внутрішні відступи */
+  gap: 16px;
+  /* Відстань між елементами */
+  border-radius: 8px;
+  /* Згладжені кути */
+  opacity: 1;
+  /* Зробити видимою */
+}
+
+.login-form label {
+  display: flex;
+  flex-direction: column;
+  /* Вертикальне вирівнювання label */
+  gap: 8px;
+  /* Відстань між текстом і полем вводу */
+}
+
+button {
+  background-color: #4E75FF;
+  /* Колір фону кнопки */
+  color: white;
+  /* Колір тексту кнопки */
+  border: none;
+  /* Без обведення */
+  border-radius: 4px;
+  /* Згладжені кути */
+  padding: 10px 16px;
+  /* Внутрішні відступи для кнопки */
+  cursor: pointer;
+  /* Курсор у вигляді вказівника */
+  transition: background-color 0.3s;
+  /* Анімація з переходу кольору фону */
+}
+
+button:hover {
+  background-color: #6C8CFF;
+  /* Зміна кольору фону кнопки при наведені */
 }
