--- a/css/common.css
+++ b/css/common.css
@@ -7,7 +7,6 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -18,6 +17,11 @@ body {
   line-height: 1.5;
   padding: 24px;
 
+}
+#boxes {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
 }
 
 /* Стиль для ul (категорії) */
@@ -138,4 +142,12 @@ button {
 
 button:hover {
   background-color: #6C8CFF;
+}
+/* Стиль для кнопки Destroy */
+button[data-destroy] {
+  background-color: #FF4E4E;
+}
+
+button[data-destroy]:hover {
+  background-color: #FF7070;
 }
